--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,30 @@
       <h1 class="text-center">Gestão de Usuários</h1>
 
       <!-- Formulário add usuario -->
-      <div c-container="{{url_for('usuario.new_usuario')}}"></div>
+      <div id="form-usuario" c-container="{{url_for('usuario.new_usuario')}}"></div>
 
       <hr>
 
       <!-- Formulário lista usuarios -->
       <div c-container="{{url_for('usuario.lista_usuarios')}}"></div>
 
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="exibir-usuario"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
