--- a/templates/item_usuario.html
+++ b/templates/item_usuario.html
@@ -1,9 +1,23 @@
-<tr>
+<tr class="usuario-{{usuario.id}}">
     <th scope="row">{{usuario.id}}</th>
     <td>{{usuario.nome}}</td>
     <td>{{usuario.email}}</td>
     <td>
-        <button type="button" class="btn btn-primary">Editar</button>
-        <button type="button" class="btn btn-danger">Excluir</button>
+        <button type="button" class="btn btn-secondary"
+            c-get="{{url_for('usuario.info_usuario', usuario_id=usuario.id)}}"
+            c-target="#exibir-usuario"
+            data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Ver
+        </button>
+        <button type="button" class="btn btn-primary"
+            c-get="{{url_for('usuario.edit_usuario', usuario_id=usuario.id)}}"
+            c-target="#form-usuario">
+                Editar
+        </button>
+        <button type="button" class="btn btn-danger" 
+            c-delete="{{url_for('usuario.deletar_usuario', usuario_id=usuario.id)}}" 
+            c-remove-closest="tr">
+                Excluir
+        </button>
     </td>
 </tr>
